# pixiv

./: .gitignore  .travis.yml  CHANGELOG.md  Data-Generically.html  LICENSE  README.md  Web-Pixiv-API.html  Web-Pixiv-Auth.html  Web-Pixiv-Download.html  Web-Pixiv-Types-Lens.html  Web-Pixiv-Types-PixivT.html  Web-Pixiv-Types.html  Web-Pixiv-Utils.html  Web-Pixiv.html  cabal.project  doc-index-36.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index-X.html  doc-index-Z.html  (+8 more)
.github/: ci.yaml
.github/workflows/: ci.yaml  nix.yaml  pages.yaml
src/: Data.Generically.html  Web.Pixiv.API.Article.html  Web.Pixiv.API.Illust.html  Web.Pixiv.API.PixivEntry.html  Web.Pixiv.API.Search.html  Web.Pixiv.API.Trending.html  Web.Pixiv.API.User.html  Web.Pixiv.API.html  Web.Pixiv.Auth.html  Web.Pixiv.Download.html  Web.Pixiv.TH.html  Web.Pixiv.Types.Lens.html  Web.Pixiv.Types.PixivT.html  Web.Pixiv.Types.html  Web.Pixiv.Utils.html  Web.Pixiv.html
src/Data/: Generically.hs
src/Web/: Pixiv.hs
src/Web/Pixiv/: API.hs  Auth.hs  Download.hs  TH.hs  Types.hs  Utils.hs
src/Web/Pixiv/API/: Article.hs  Illust.hs  PixivEntry.hs  Search.hs  Servant.hs  Trending.hs  User.hs
src/Web/Pixiv/Types/: API.hs  Illust.hs  Lens.hs  Pixiv.hs  PixivEntry.hs  PixivM.hs  PixivT.hs  Search.hs  Trending.hs  User.hs
test/: Spec.hs  illust_comments.json  illust_detail.json  illust_related.json  search_illust.json  trending_tags.json  ugoira_metadata.json  user_detail.json  user_follower.json  user_following.json  user_illusts.json  user_mypixiv.json
