cabal-version:   3.0
name:            pixiv
version:         0.1.0
synopsis:        Pixiv api binding

-- description:
category:        Web
license:         BSD-3-Clause
license-file:    LICENSE
author:          Poscat, berberman
maintainer:
  Poscat <poscat@mail.poscat.moe>, berberman <berberman@yandex.com>

copyright:       Copyright (c) Poscat 2020
stability:       alpha
homepage:        https://github.com/poscat0x04/pixiv
bug-reports:     https://github.com/poscat0x04/pixiv/issues
extra-doc-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC ==8.8.3 || ==8.8.4 || ==8.10.1 || ==8.10.2 || ==8.10.3

common common-attrs
  build-depends:
    , aeson
    , base        >=4.10 && <5
    , bytestring

  default-language:   Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates

  if impl(ghc >=8.0)
    ghc-options: -Wredundant-constraints

  if impl(ghc >=8.2)
    ghc-options: -fhide-source-paths

    if impl(ghc >=8.4)
      ghc-options: -Wmissing-export-lists

  if impl(ghc >=8.8)
    ghc-options: -Wmissing-deriving-strategies

  default-extensions:
    NoStarIsType
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    KindSignatures
    LambdaCase
    MultiWayIf
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

library
  import:          common-attrs
  build-depends:
    , base16-bytestring
    , cryptohash-md5
    , deriving-aeson
    , exceptions
    , http-client
    , http-client-tls
    , lens
    , monad-control
    , mtl
    , servant
    , servant-client
    , servant-client-core
    , text
    , time
    , transformers
    , transformers-base

  exposed-modules:
    Web.Pixiv.API
    Web.Pixiv.Auth
    Web.Pixiv.Download
    Web.Pixiv.Types
    Web.Pixiv.Types.Illust
    Web.Pixiv.Types.Lens
    Web.Pixiv.Types.PixivEntry
    Web.Pixiv.Types.PixivT
    Web.Pixiv.Types.Search
    Web.Pixiv.Types.Trending
    Web.Pixiv.Types.User
    Web.Pixiv.Utils

  other-modules:   Data.Generically
  hs-source-dirs:  src

test-suite pixiv-test
  import:         common-attrs
  type:           exitcode-stdio-1.0
  build-depends:
    , http-client
    , http-client-tls
    , pixiv

  hs-source-dirs: test
  main-is:        Spec.hs

source-repository head
  type:     git
  location: https://github.com/poscat0x04/pixiv
