cabal-version:   3.0
name:            pixiv
version:         0.1.0
synopsis:        Pixiv API binding based on servant-client
description:
  Pixiv API binding based on servant-client.
  See README for details.

category:        Web
license:         BSD-3-Clause
license-file:    LICENSE
author:          Poscat, berberman
maintainer:
  Poscat <poscat@mail.poscat.moe>, berberman <berberman@yandex.com>

copyright:       Copyright (c) The closed eye of love 2021
stability:       alpha
homepage:        https://github.com/The-closed-eye-of-love/pixiv
bug-reports:     https://github.com/The-closed-eye-of-love/pixiv/issues
extra-doc-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC ==8.8.3 || ==8.8.4 || ==8.10.1 || ==8.10.2 || ==8.10.3

common common-attrs
  build-depends:
    , aeson
    , base             >=4.10 && <5
    , bytestring
    , http-client
    , http-client-tls

  default-language:   Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates

  if impl(ghc >=8.0)
    ghc-options: -Wredundant-constraints

  if impl(ghc >=8.2)
    ghc-options: -fhide-source-paths

  if impl(ghc >=8.4)
    ghc-options: -Wmissing-export-lists

  if impl(ghc >=8.8)
    ghc-options: -Wmissing-deriving-strategies

  default-extensions:
    NoStarIsType
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    KindSignatures
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

library
  import:          common-attrs
  build-depends:
    , base16-bytestring
    , cryptohash-md5
    , deriving-aeson
    , directory
    , exceptions
    , filepath
    , lens
    , monad-control
    , mtl
    , process
    , servant
    , servant-client
    , servant-client-core
    , temporary
    , text
    , time
    , transformers
    , transformers-base
    , zip-archive

  exposed-modules:
    Web.Pixiv
    Web.Pixiv.API
    Web.Pixiv.Auth
    Web.Pixiv.Download
    Web.Pixiv.Types
    Web.Pixiv.Types.Lens
    Web.Pixiv.Types.PixivT
    Web.Pixiv.Utils

  other-modules:
    Data.Generically
    Web.Pixiv.API.Illust
    Web.Pixiv.API.PixivEntry
    Web.Pixiv.API.Search
    Web.Pixiv.API.Trending
    Web.Pixiv.API.User

  hs-source-dirs:  src

test-suite pixiv-test
  import:         common-attrs
  type:           exitcode-stdio-1.0
  build-depends:  pixiv
  hs-source-dirs: test
  main-is:        Spec.hs

source-repository head
  type:     git
  location: https://github.com/poscat0x04/pixiv
